Finished status bar and server status controls

--- a/11thLauncher/Views/AboutView.xaml
+++ b/11thLauncher/Views/AboutView.xaml
@@ -46,7 +46,7 @@
                 </Paragraph>
                 <Paragraph>
                     <Run FontWeight="Bold" Text="MahApps.Metro"/>
-                    <Run Text=": www.mahapps.com/"/>
+                    <Run Text=": www.mahapps.com"/>
                 </Paragraph>
                 <Paragraph>
                     <Run FontWeight="Bold" Text="QueryMaster"/>
