--- a/11thLauncher/Views/Controls/ServerQueryView.xaml
+++ b/11thLauncher/Views/Controls/ServerQueryView.xaml
@@ -1,12 +1,104 @@
-﻿<Window x:Class="_11thLauncher.Views.Controls.ServerQueryView"
+﻿<UserControl x:Class="_11thLauncher.Views.Controls.ServerQueryView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:_11thLauncher.Views.Controls"
+        xmlns:resx="clr-namespace:_11thLauncher.Resources"
+        xmlns:vm="clr-namespace:_11thLauncher.ViewModels.Controls"
+        xmlns:model="clr-namespace:_11thLauncher.Model"
+        xmlns:server="clr-namespace:_11thLauncher.Model.Server"
         mc:Ignorable="d"
-        Title="ServerQueryView" Height="300" Width="300">
+        d:DesignHeight="337" d:DesignWidth="615" d:DataContext="{d:DesignInstance Type=vm:ServerQueryViewModel}">
     <Grid>
-        
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" FontWeight="Bold"/>
+        <ComboBox x:Name="Servers" HorizontalAlignment="Left" Margin="71,10,0,0" VerticalAlignment="Top" Width="286">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="server:Server">
+                    <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
+                        <Label Content="{Binding Path=Name, Mode=OneWay}"/>
+                        <Rectangle Height="15" Width="15">
+                            <Rectangle.OpacityMask>
+                                <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_layer_thick}" />
+                            </Rectangle.OpacityMask>
+                            <Rectangle.Style>
+                                <Style TargetType="Rectangle">
+                                    <Setter Property="Fill" Value="#888888"></Setter>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Unknown}">
+                                            <Setter Property="Rectangle.Fill" Value="#888888"></Setter>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Checking}">
+                                            <Setter Property="Rectangle.Fill" Value="#888888"></Setter>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Offline}">
+                                            <Setter Property="Rectangle.Fill" Value="#BD3400"></Setter>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding ServerStatus}" Value="{x:Static model:ServerStatus.Online}">
+                                            <Setter Property="Rectangle.Fill" Value="#56B812"></Setter>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Rectangle.Style>
+                        </Rectangle>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <Button x:Name="ButtonQueryServer" Content="{x:Static resx:Strings.S_BTN_CHECK_SERVER_STATUS}" 
+                HorizontalAlignment="Left" VerticalAlignment="Top" 
+                Width="223" Height="26" 
+                Margin="382,10,0,0">
+            <Button.Style>
+                <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                    <Setter Property="IsEnabled" Value="True"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SelectedServer.ServerStatus}" Value="{x:Static model:ServerStatus.Checking}">
+                            <Setter Property="IsEnabled" Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER_NAME}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,52,0,0" />
+        <TextBox Text="{Binding SelectedServer.ServerInfo.Name}" 
+                 TextWrapping="Wrap" IsEnabled="False"
+                 HorizontalAlignment="Left" VerticalAlignment="Top" 
+                 Height="23" Width="534" Margin="71,53,0,0" />
+
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER_MISSION}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,94,0,0" />
+        <TextBox Text="{Binding SelectedServer.ServerInfo.Description}" 
+                 TextWrapping="Wrap" IsEnabled="False"
+                 HorizontalAlignment="Left" VerticalAlignment="Top" 
+                 Height="23" Width="250" Margin="71,95,0,0" />
+
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER_MAP}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,134,0,0" />
+        <TextBox Text="{Binding SelectedServer.ServerInfo.Map}" 
+                 TextWrapping="Wrap"  IsEnabled="False"
+                 HorizontalAlignment="Left" VerticalAlignment="Top"
+                 Height="23" Width="250" Margin="71,135,0,0" />
+
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER_PING}" HorizontalAlignment="Left" Margin="10,177,0,0" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding SelectedServer.ServerInfo.Ping}" 
+                 TextWrapping="Wrap" IsEnabled="False"
+                 HorizontalAlignment="Left" VerticalAlignment="Top" 
+                 Height="23" Width="250" Margin="71,178,0,0" />
+
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER_VERSION}" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding SelectedServer.ServerInfo.GameVersion}" 
+                 TextWrapping="Wrap" IsEnabled="False"
+                 HorizontalAlignment="Left" VerticalAlignment="Top"
+                 Height="23" Width="250" Margin="71,222,0,0" />
+
+        <Label Content="{x:Static resx:Strings.S_LABEL_SERVER_PLAYERS}" HorizontalAlignment="Left" Margin="326,94,0,0" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding SelectedServer.ServerInfo.CurrentPlayers, Mode=OneWay}" 
+                 TextWrapping="Wrap" TextAlignment="Center" IsEnabled="False" 
+                 HorizontalAlignment="Left" VerticalAlignment="Top"
+                 Height="23" Width="208" Margin="397,95,0,0" />
+        <ListBox ItemsSource="{Binding SelectedServer.ServerInfo.PlayerList, Mode=OneWay}"
+                 BorderBrush="#FFCCCCCC" BorderThickness="1"
+                 HorizontalAlignment="Left" VerticalAlignment="Top"
+                 Height="193" Width="208" 
+                 Margin="397,134,0,0" />
     </Grid>
-</Window>
+</UserControl>
