Work on profile manager

--- a/11thLauncher/Views/Controls/ServerQueryView.xaml
+++ b/11thLauncher/Views/Controls/ServerQueryView.xaml
@@ -55,6 +55,9 @@
                         <DataTrigger Binding="{Binding SelectedServer.ServerStatus}" Value="{x:Static model:ServerStatus.Checking}">
                             <Setter Property="IsEnabled" Value="False"/>
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding SelectedServer}" Value="{x:Null}">
+                            <Setter Property="IsEnabled" Value="False"/>
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </Button.Style>
